[package]
name = "deno_lint"
version = "0.83.0"
edition = "2021"
description = "lint for deno"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_lint"
keywords = ["deno", "lint"]
categories = ["development-tools"]
exclude = [
    "benchmarks/*",
]

[lib]
name = "deno_lint"

[[example]]
name = "dlint"
required-features = ["docs", "gritql"]
test = true

[features]
default = []
docs = []
gritql = ["dep:marzano-core", "dep:marzano-language", "dep:marzano-util"]

[dependencies]
deno_ast = { version = "0.53.0", features = ["scopes", "transforms", "utils", "visit", "view", "react"] }
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
regex = "1.10.2"
once_cell = "1.19.0"
derive_more = { version = "0.99.17", features = ["display"] }
anyhow = "1.0.79"
if_chain = "1.0.2"
phf = { version = "0.11.2", features = ["macros"] }
deno_semver = "0.9.0"
marzano-core = { git = "https://github.com/getgrit/gritql.git", rev = "44f2d034a1598e54a0933e5e946cdfa692965ebb", package = "marzano-core", default-features = false, features = ["grit-parser", "language-parsers", "non_wasm"], optional = true }
marzano-language = { git = "https://github.com/getgrit/gritql.git", rev = "44f2d034a1598e54a0933e5e946cdfa692965ebb", package = "marzano-language", default-features = false, features = ["builtin-parser"], optional = true }
marzano-util = { git = "https://github.com/getgrit/gritql.git", rev = "44f2d034a1598e54a0933e5e946cdfa692965ebb", package = "marzano-util", optional = true }

[dev-dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
clap = { version = "3", features = ["cargo"] }
env_logger = "0.10.1"
globwalk = "0.9.1"
os_pipe = "1.1.5"
pulldown-cmark = "0.9.3"
rayon = "1.8.0"
console_static_text = "0.8.2"
