[package]
name = "deno_lint"
version = "0.84.1"
edition = "2021"
description = "lint for deno"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_lint"
keywords = ["deno", "lint"]
categories = ["development-tools"]

[lib]
name = "deno_lint"

[features]
default = []

[dependencies]
deno_ast = { version = "0.53.2", features = ["scopes", "transforms", "utils", "visit", "view", "react"] }
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
regex = "1.10.2"
once_cell = "1.19.0"
derive_more = { version = "0.99.17", features = ["display"] }
if_chain = "1.0.2"
phf = { version = "0.11.2", features = ["macros"] }
deno_semver = "0.10.0"
